# typed_env

./: .gitignore  LICENSE  README.md  pyproject.toml  typed_env.py
tests/: invalid.env  invalid2.env  test_class.py  valid.env  valid2.env
timelessnesses/: typed_env.py
typed_env/: typed_env.py
