[tool.poetry]
name = "timelessnesses-typed-env"
version = "1.0.0"
description = "A python module that help you have a type safety on enviroment variable"
authors = ["timelessnesses <mooping3roblox@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "timelessnesses"}]
homepage = "https://github.com/timelessnesses/typed_env"

[tool.poetry.dependencies]
python = "^3.8"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
